--- a/index.html
+++ b/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dark Moon Messenger</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,500,500i,700i,800,900" rel="stylesheet">
-  </head>
-  <body>
 
-    <div id="login-screen" class="login-screen">
-      <div class="title">Dark Moon Messenger</div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Eco Messenger</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,500,500i,700i,800,900" rel="stylesheet">
+</head>
+
+<body>
+
+  <div id="login-screen" class="login-screen">
+    <div id="background-wrap">
+      <div class="bubble x1"></div>
+      <div class="bubble x2"></div>
+      <div class="bubble x3"></div>
+      <div class="bubble x4"></div>
+      <div class="bubble x5"></div>
+      <div class="bubble x6"></div>
+      <div class="bubble x7"></div>
+      <div class="bubble x8"></div>
+      <div class="bubble x9"></div>
+      <div class="bubble x10"></div>
+    </div>
+    <div style="z-index: 99; display: flex; justify-content: space-between; flex-direction: column; height: 100vh;">
       <div class="logo">
-        <img src="./img/logo.png" width="200" height="auto" alt="logo"/>
-      </div>
+        <img src="./img/logo.png" width="250" height="225" alt="logo" /></div>
       <div id="login-btn" class="login-btn">
         <span class="label">LOGIN</span>
       </div>
       <div class="gretting">All rights reserved. &copy;</div>
-        </div>
+    </div>
+  </div>
 
-    <div id="chat-screen" class="chat-screen"></div>
+  <div id="chat-screen" class="chat-screen"></div>
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+
+
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
